--- a/orchestration.Rmd
+++ b/orchestration.Rmd
@@ -42,7 +42,7 @@ source("functions.R") # Defines all the functions below prefixed with "user_".
 list(
   tar_target(data1, user_data1()),
   tar_target(data2, list(user_data2_slice1(), user_data2_slice2())),
-  tar_target(analysis, user_analyze(data2), pattern = map(data2)),
+  tar_target(analysis, user_analyze(data1, data2), pattern = map(data2)),
   tar_target(validation, user_validate(analysis), pattern = map(analysis)),
   tar_target(summary, user_summarize(validation)) # Does not map over validation.
 )
