--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,11 @@
+---
+output: github_document
+---
+
 # targets R package design specification
 
 [![ropensci](https://badges.ropensci.org/401_status.svg)](https://github.com/ropensci/software-review/issues/401)
-[![JOSS](https://joss.theoj.org/papers/10.21105/joss.02959/status.svg)](https://doi.org/10.21105/joss.02959) 
+[![JOSS](https://joss.theoj.org/papers/10.21105/joss.02959/status.svg)](https://doi.org/10.21105/joss.02959)
 [![status](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![check](https://github.com/ropensci/targets-design/workflows/check/badge.svg)](https://github.com/ropensci/targets-design/actions?query=workflow%3Acheck)
 [![publish](https://github.com/ropensci/targets-design/workflows/publish/badge.svg)](https://github.com/ropensci/targets-design/actions?query=workflow%3Apublish)
@@ -14,25 +18,6 @@ Please note that this package is released with a [Contributor Code of Conduct](h
 
 ## Citation
 
-```r
+```{r}
 citation("targets.design")
-#> The targets design specification is part of targets. To cite targets, see #> below:
-#> 
-#>   Landau, W. M., (2021). The targets R package: a dynamic Make-like
-#>   function-oriented pipeline toolkit for reproducibility and #> high-performance
-#>   computing. Journal of Open Source Software, 6(57), 2959,
-#>   https://doi.org/10.21105/joss.02959
-#> 
-#> A BibTeX entry for LaTeX users is
-#> 
-#>   @Article{,
-#>     title = {The targets R package: a dynamic Make-like function-oriented #> pipeline toolkit for reproducibility and high-performance computing},
-#>     author = {William Michael Landau},
-#>     journal = {Journal of Open Source Software},
-#>     year = {2021},
-#>     volume = {6},
-#>     number = {57},
-#>     pages = {2959},
-#>     url = {https://doi.org/10.21105/joss.02959},
-#>   }
 ```
