--- a/composition.Rmd
+++ b/composition.Rmd
@@ -10,8 +10,6 @@ The following classes define specialized objects for the fields of targets.
 
 * Command
 * Settings
-* Cache
-    * Memory
 * Value
 * Metrics
 * Store
@@ -27,7 +25,6 @@ Field | Builder | Stem | Branch | Bud | Pattern
 ---|---|---|---|---|---|
 Command | ✓ | ✓ | ✓ | ✓ | ✓ |
 Settings | ✓ | ✓ | ✓ | ✓ | ✓ |
-Cache | ✓ | ✓ | ✓ | ✓ | ✓ |
 Value | ✓ | ✓ | ✓ | ✓ | ✓ |
 Metrics | ✓ | ✓ | ✓ | | |
 Store | ✓ | ✓ | ✓ | | |
@@ -56,14 +53,6 @@ A `command` object is an abstraction around an R code chunk. It contains an R ex
 
 A `settings` object keeps track of the user-defined target-specific configuration settings of the targets, such as the target name, storage format, failure mode, memory management behavior, and branching pattern specification (if applicable).
 
-### Cache class
-
-The cache holds the in-memory objects that a command needs in order to run. It contains two `memory` objects: one for global objects ("imports") and another for targets. The `targets` field requires the most maintenance because this is where a target's upstream dependencies get loaded and unloaded. The package performs a tricky balancing act because a target needs all its dependencies loaded into memory and the time of building, but superfluous objects need to be regularly cleared out in order to conserve resources. Also, buds and branches are loaded under the name of the parent so the command's expression does not need to change during branching.
-
-### Memory class
-
-A `memory` object is an efficient abstraction around an environment. It contains the environment itself and the names of the objects inside. This layer of abstraction allows us to avoid repeated calls to `names()`, thus increasing performance.
-
 ### Value class
 
 The `value` class, also covered in the `oop` vignette, is a layer around a target's return value. Having a special `value` object allows us to easily distinguish between two situations:
@@ -89,7 +78,7 @@ A `file` object is an abstraction of a collection of files and directories. It c
 
 ### Subpipeline
 
-A `subpipeline` is not actually a class of its own, it is just a `pipeline` object with only the direct dependencies of a particular target and no values or cache objects in those dependencies. Its only purpose is to efficiently assist with the mechanics of worker-side retrieval.
+A `subpipeline` is not actually a class of its own, it is just a `pipeline` object with only the direct dependencies of a particular target and no `value` objects in those dependencies. Its only purpose is to efficiently assist with the mechanics of worker-side dependency retrieval.
 
 ### Junction class
 
